   the object's name to the beginning of the attr value (respecting
   no_name and no_space attr flags), for @o-* attrs. [MG]
 * Clean up the functions that send data across the network to 
   connections. [SW]
 * Updated intructions for compiling with MySQL support on Windows
   contributed by Daniko.
 * Improve ssl_slave cleanup code on lost connections and shutdowns. [SW]
   
Fixes:
 * @lock/infilter, not @lock/infitler. [SW]
 * @shutdown/reboot handles failed database saves much more
   gracefully.  [SW]
 * Help fixes by Wiggles and Trelane. [MG]
 * Fix a few places that could trigger an integer division exception.
   Reported by Ashen-Shugar. [SW]
 * A number of places in the hardcode incorrectly took TINY_MATH into
   account when deciding if something was a valid number or not. From
   a report by Daniel Powell. [MG]
 * doing() now evaluates the DOING attribute with better values for %#
   and %@. From a report by Padraic. [MG]
 * Fix some cases where functions like lcon() could return partial
   dbrefs at the end of a long output string. [SW]
 * When magic-sorting strings with embedded dbrefs, setunion() no longer
   treats different objects with the same name as being identical. Reported
   by Minion. [MG] [GM]
 * type() and hastype() claimed to work on GARBAGE objects, but actually
   returned #-1 NO SUCH MATCH. Reported by Jules. [MG]
 * A few messages were sent with incorrect nospoof data. Reported by 
   Jules. [MG]
 * Fix a harmless but annoying race condition when making a SSL connection 
   to a game in the middle of starting. [SW]
 * Fixed minor memory leak in chat system. [MG]
 * @channel/decompile didn't recreate the ANSI in a channel's name. [MG]
 * Channel names can now contain any amount of ANSI, as long as the visible
   name is 30 chars or less in length. Suggested by Kimiko Muffin. [MG]
 * @channel/rename allowed you to give channels invalid names. [MG]
 * @readcache rebuilds the linux file watch list, allowing deleted